# qpbeaver

./: .gitignore  README.md  main.py  pyproject.toml
qpbeaver/: build.py  create.py  qpbeaver.py  split.py  typst.py
src/: qpbeaver.py
